Template Editor: updates to capsule css for fixing baseline allignment in FF3, removing the gradient from the expanded arrow indicator graphic and removing the whitespace between capsule and template when expanded. TOC: Minor css update to ensure the resizing is not available when a user has a dialog open.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk/extensions/UsabilityInitiative@63557 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/wikiEditor.toc.css
+++ b/css/wikiEditor.toc.css
@@ -163,6 +163,7 @@ body.rtl wikiEditor-ui-toc ul ul ul ul ul ul li div {
 }
 .wikiEditor-ui-right .ui-resizable-w {
 	left: 0px !important;
+	z-index: 0;
 }
 
 .wikiEditor-ui-right .wikiEditor-ui-toc-resize-grip {
